// Copyright 2011, Tencent Inc.
// Author: Hangjun Ye <hansye@tencent.com>
// Xiaokang Liu <hsiaokangliu@tencent.com>
// Eric Liu <ericliu@tencent.com>

import "poppy/rpc_option.proto";

package rpc_examples;

message EchoRequest {
    required string user = 1;
    required string message = 2;
}

message EchoResponse {
    required string user = 1;
    required string message = 2;
}

// The server side serivce.
service EchoServer {
    // The service timeout is 5 seconds.
    option (poppy.service_timeout) = 5000;

    rpc Echo(EchoRequest) returns(EchoResponse) {
        // This method specific timeout is 1 second, to test the handling of
        // request timeout.
        option (poppy.method_timeout) = 1000;
    }
}
